# PyFGH

./: .gitignore  FGH.py  LICENSE  README.md  main.py  pyproject.toml  readme.txt  todo.txt  utilities.py
docs/: VSE_pres.pptx
examples/: fgh_1d_doublewell.py  fgh_2d_fci  fgh_3d_mcscf
old_scripts/: old_script_1.py  old_script_2.py
src/pyfgh/: fgh.py  for_AVS.py  irsec.py  main.py  normal_modes.py  potential.txt  potential_2.txt  proton.py  stark.py
src/pyfgh/tests/: example.out  example_gen.py  example_input.in  example_pot.in  fgh_function_test.py
src/pyfgh/tests/fgh_tests/: fgh_flex_tests.py  fgh_hardcode_test.py  fgh_mcscf_tests.py
