[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfgh"
version = "0.0.1"
authors = [
  { name="Maxim Secor", email="maxim.secor@yale.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MaximSecor/PyFGH"
"Bug Tracker" = "https://github.com/MaximSecor/PyFGH/issues"
